--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Corso Web Developer - Epicode school</title>
-    <meta
-      name="viewport"
-      content="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionisra in 3 mesi"
-    />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
@@ -26,9 +22,11 @@
   </head>
   <body>
     <header>
-      <div>
-        <img src="./images/logo.png" alt="logo" />
-        <h1>Corso Web Developer</h1>
+      <div class="logo">
+        <div class="images">
+          <img src="./images/logo.png" alt="logo" />
+        </div>
+        <h1>Corso Web <br />Developer</h1>
         <p>
           Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
           arricchire il CV, tu pensa ad arricchire le tue competenze.
@@ -44,20 +42,20 @@
       </p>
       <h3>Lavora da dove vuoi</h3>
       <p>Lavora da casa, in riva al mare o in montagna.</p>
-      <img src="./images/notebook.jpg" />
+      <img src="./images/notebook.jpg" class="notebook" />
       <h3>Scegli il tuo ruolo</h3>
       <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
       <h3>Lavoro in libertà</h3>
       <p>
         Non serve lavorare in ufficio per essere creatori di prodotti digitali
       </p>
-      <div>
+      <div class="spot">
         <h1>Epicode garantisce</h1>
         <p>
           "3 mesi intensivi di corso che cambieranno radicalmente la tua vita"
         </p>
         <h4>Mario Rossi</h4>
-        <p>CEO, Epicode</p>
+        <p class="under" style="font-size: 13px">CEO, Epicode</p>
       </div>
       <div class="card1">
         <img src="./images/foto1.jpg" alt="fotoPc" />
