--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           loro.
         </p>
       </div>
-      <div class="card3" alt="scrivania">
+      <div class="card3">
+        <img src="./images/foto3.jpg" />
         <h3>Lavora subito</h3>
         <p>Sappiamo cosa vogliono le aziende, perchè lavoriamo con loro.</p>
       </div>
