--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
   </head>
   <body>
     <header>
+      <div class="images">
+        <img src="./images/logo.png" alt="logo" />
+      </div>
       <div class="logo">
-        <div class="images">
-          <img src="./images/logo.png" alt="logo" />
+        <div class="sfondo">
+          <h1>Corso Web <br />Developer</h1>
+          <p>
+            Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti
+            vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.
+          </p>
+          <button type="button">Partiamo!</button>
         </div>
-        <h1>Corso Web <br />Developer</h1>
-        <p>
-          Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
-          arricchire il CV, tu pensa ad arricchire le tue competenze.
-        </p>
-        <button type="button">Partiamo!</button>
       </div>
     </header>
     <main>
@@ -80,12 +82,18 @@
     </main>
     <footer>
       <h1>Contattaci</h1>
-      <p><i class="fas fa-phone-alt"></i>(+39) 11223456</p>
-      <p><i class="fas fa-envelope"></i>info@epicode.school</p>
+      <p style="text-decoration: underline">
+        <i class="fas fa-phone-alt"></i>(+39) 11223456
+      </p>
+      <p style="text-decoration: underline">
+        <i class="fas fa-envelope"></i>info@epicode.school
+      </p>
       <p>
         <i class="fas fa-external-link-square-alt"></i>Via Appia 1 - 00100 Roma
         (RM)
       </p>
+      <hr />
+      <p>&#169 2021. Immagini di <u>Pixabay</u></p>
     </footer>
   </body>
 </html>
